[GH Copilot] Remove all static warning/error code analysis.